# humanoid-hand-control-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: portfolio_mapping.md
ros2/: README.md  finger_controller_node.cpp
scripts/: benchmark.py  generate_plots.py  run_demo.py
src/hand_control/: __init__.py  controllers.py  learner.py  metrics.py  model.py  simulator.py
tests/: test_controllers.py  test_learner.py  test_simulation.py
