[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-hand-control-lab"
version = "0.1.0"
description = "Portfolio project: simulation and control stack for a humanoid robot finger."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexander Diener" }]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
